--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -3,6 +3,9 @@
 {% block content %}
 <div class="w-100 h-75 bg-light p-4 rounded shadow-sm">
     something something
+    {% if current_user.is_authenticated %}
+    Hi {{ current_user.nombre }}!
+    {% endif %}
 </div>
 {% endblock content %}
 
