--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -9,7 +9,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/usuario_final">Usuario Final</a>
@@ -19,6 +19,6 @@
                 </li>
             </ul>
 
-        </div>
+        </div> -->
     </div>
 </nav>
