--- a/app/templates/static_pages/base.html
+++ b/app/templates/static_pages/base.html
@@ -52,7 +52,8 @@
 
     <!-- RESPONSIVE CSS -->
     <link href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
-
+    {% block stylesheets %}
+    {% endblock stylesheets %}
 </head>
 
 <body>
@@ -83,7 +84,7 @@
     <!-- EXTERNAL SCRIPTS
 		============================================= -->
     <script src="{{ url_for('static', filename='js/jquery-3.4.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script> -->
     <script src="{{ url_for('static', filename='js/owl.carousel.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/modernizr.custom.js') }}"></script>
