--- a/app/templates/static_pages/custom/demo-4.html
+++ b/app/templates/static_pages/custom/demo-4.html
@@ -66,7 +66,7 @@
 	<!-- <link href="css/pink-theme.css" rel="stylesheet">      -->
 	<!-- <link href="css/red-theme.css" rel="stylesheet">       -->
 	<!-- <link href="css/royalblue-theme.css" rel="stylesheet"> -->
-	<link href="{{ url_for('static', filename='css/skyblue-theme.css') }}" rel="stylesheet">
+	<link href="{{ url_for('static', filename='css/violet-theme.css') }}" rel="stylesheet">
 	<!-- <link href="css/violet-theme.css" rel="stylesheet">    -->
 
 	<!-- RESPONSIVE CSS -->
