--- a/app/templates/static_pages/includes/header.html
+++ b/app/templates/static_pages/includes/header.html
@@ -56,7 +56,8 @@
 
                         <!-- HEADER BUTTON -->
                         <li class="nl-simple" aria-haspopup="true">
-                            <a href="#" class="btn btn-tra-white primary-hover last-link">SolarBeam App</a>
+                            <a href="/solarbeam/app/" class="btn btn-tra-white primary-hover last-link">SolarBeam
+                                App</a>
                         </li>
 
 
