--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="/">
             <img src="{{ url_for('static', filename='logo/solarBeam.svg') }}" alt="" width="30" height="24"
                 class="d-inline-block align-text-top">
-            SolarBeam
+            Skyterra
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
