--- a/app/static/css/solarbeam/solarbeam.css
+++ b/app/static/css/solarbeam/solarbeam.css
@@ -1,5 +1,7 @@
 .section-bg {
     width: 100%;
+    min-height: 100vh;
+    box-sizing: border-box;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
