--- a/app/templates/solarBeam/confirm_user.html
+++ b/app/templates/solarBeam/confirm_user.html
@@ -1,16 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}¿Cómo funciona?{% endblock title %}
+{% block title %}Confirmar registro{% endblock title %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-
 
 {% endblock stylesheets %}
 
 {% block content %}
-<section class="section-bg">
+<section>
     <div class="container mt-3 mb-3">
         <div class="card">
             <div class="card-header h4 text-center">Confirmar registro de usuario</div>
