se añadieron elementos para el registro de una nueva oferta de compraa

--- a/app/templates/solarBeam/integrador_oferta_compra.html
+++ b/app/templates/solarBeam/integrador_oferta_compra.html
@@ -32,6 +32,9 @@
                 <div class="row d-flex justify-content-center mt-3">
                     <div id="gMap" style='width: 90%; height: 60vh;'></div>
                 </div>
+                <div class="row d-flex justify-content-center mt-3">
+                    <a href="#"><button class="btn btn-primary">Agregar Oferta</button></a>
+                </div>
             </div>
         </div>
     </div>
