se cambio error en label

--- a/app/templates/solarBeam/reg_oferta_compra.html
+++ b/app/templates/solarBeam/reg_oferta_compra.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="form-row mt-3">
                         <div class="col-sm-6">
-                            <label for="capMin">Capacidad mínima en Wp</label>
+                            <label for="capMin">Capacidad mínima en kWp</label>
                             <input type="number" name="capMin" id="capMin" class="form-control">
                         </div>
                         <div class="col-sm-6">
